--- a/index.html
+++ b/index.html
@@ -12,103 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap"
       rel="stylesheet"
     />
-    <style>
-      body {
-        font-family: "Patrick Hand", cursive;
-        overflow: hidden;
-        display: flex;
-        flex-direction: column;
-        justify-content: stretch;
-      }
-      nomi {
-        padding: 10px;
-        height: 18vh;
-        line-height: 37px;
-        overflow: hidden;
-        overflow-y: hidden;
-        overflow-y: scroll;
-      }
-      adder {
-        width: 190px;
-        height: 35px;
-        border-radius: 23px;
-        background-color: red;
-        color: white;
-        font-size: 16px;
-        border: none;
-        cursor: pointer;
-      }
-      adder:active {
-        background-color: red;
-        color: white;
-      }
-      nome {
-        background-color: gainsboro;
-        border-radius: 29px;
-        padding: 7px;
-        color: #474646;
-        margin-right: 5px;
-        cursor: pointer;
-        text-justify: inter-word;
-        word-break: break-all;
-      }
-      bottiglia {
-        display: flex;
-        justify-content: center;
-        height: 46vh;
-      }
-      spin {
-        display: flex;
-        justify-content: center;
-        height: 6vh;
-        margin-top: 70px;
-      }
-      add {
-        display: flex;
-        justify-content: center;
-        height: 15vh;
-      }
-      .adder {
-        width: 190px;
-        height: 35px;
-        border-radius: 23px;
-        background-color: red;
-        color: white;
-        font-size: 16px;
-        border: none;
-        cursor: pointer;
-      }
-      .adder:active {
-        width: 190px;
-        height: 35px;
-        border-radius: 23px;
-        background-color: blue;
-        color: white;
-        font-size: 16px;
-        border: none;
-        cursor: pointer;
-      }
-      .spinner {
-        width: 190px;
-        height: 35px;
-        border-radius: 23px;
-        background-color: red;
-        color: white;
-        font-size: 16px;
-        border: none;
-        cursor: pointer;
-      }
-      .spinner:active {
-        width: 190px;
-        height: 35px;
-        border-radius: 23px;
-        background-color: blue;
-        color: white;
-        font-size: 16px;
-        border: none;
-        cursor: pointer;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nomi>
@@ -122,94 +26,6 @@
       <button class="adder">Aggiungi Partecipante</button>
     </add>
 
-    <script>
-      Array.prototype.remove = function () {
-        var what,
-          a = arguments,
-          L = a.length,
-          ax;
-        while (L && this.length) {
-          what = a[--L];
-          while ((ax = this.indexOf(what)) !== -1) {
-            this.splice(ax, 1);
-          }
-        }
-        return this;
-      };
-      function randomTime(min, max) {
-        return Math.floor(Math.random() * (max - min + 1) + min);
-      }
-      partecipanti = [];
-      document
-        .getElementsByClassName("adder")[0]
-        .addEventListener("click", async () => {
-          const { value: nome } = await Swal.fire({
-            title: "Inserisci il nome del partecipante",
-            input: "text",
-            inputLabel: "Nome",
-            inputPlaceholder: "Scrivi il nome",
-          });
-
-          if (nome) {
-            if (!partecipanti.includes(nome)) {
-              partecipanti.push(nome);
-              document.getElementsByTagName(
-                "lista"
-              )[0].innerHTML += `<nome>${nome}</nome>`;
-
-              arr = document.getElementsByTagName("nome");
-              for (elem of arr) {
-                elem.addEventListener("click", (ev) => {
-                  partecipanti.remove(ev.target.innerText);
-                  ev.target.remove();
-                });
-              }
-
-              Swal.fire(
-                "Fatto",
-                nome + " é stato aggiunto al gioco",
-                "success"
-              );
-            } else {
-              Swal.fire(
-                "Mmmm",
-                nome + " esiste già tra la lista dei partecipanti",
-                "error"
-              );
-            }
-          }
-        });
-
-      document
-        .getElementsByClassName("spinner")[0]
-        .addEventListener("click", () => {
-          deg = 0;
-          vel = 5;
-          stopping = false;
-          setTimeout(() => {
-            stopping = true;
-          }, randomTime(2500, 7000));
-          myInterval = setInterval(() => {
-            document.getElementsByTagName("img")[0].style.transform =
-              "rotate(" + deg + "deg)";
-            deg += vel;
-            if (stopping) {
-              vel = vel - 0.1;
-              if (vel <= 0) {
-                clearInterval(myInterval);
-                winner();
-              }
-            }
-          }, 25);
-        });
-
-      function winner() {
-        Swal.fire({
-          title: partecipanti[randomTime(0, partecipanti.length - 1)],
-          imageUrl:
-            "https://i.pinimg.com/originals/46/f0/2b/46f02bc44d0357f7ed8a1e9f07fdc75a.gif",
-        });
-      }
-    </script>
+    <script src="function.min.js"></script>
   </body>
 </html>
